[gd_scene load_steps=5 format=3 uid="uid://d214u36ws1khb"]

[ext_resource type="Script" path="res://game/Ammo/SwordAmmo/SwordAmmo.gd" id="1_snie6"]
[ext_resource type="Texture2D" uid="uid://dj1t7lx3byxy3" path="res://art/Sword.png" id="2_bnqj4"]

[sub_resource type="CircleShape2D" id="CircleShape2D_y8xna"]
radius = 4.0

[sub_resource type="CircleShape2D" id="CircleShape2D_bposu"]
radius = 12.0

[node name="SwordAmmo" type="Area2D"]
top_level = true
collision_layer = 0
collision_mask = 2
script = ExtResource("1_snie6")

[node name="SwordSprite" type="Sprite2D" parent="."]
unique_name_in_owner = true
texture = ExtResource("2_bnqj4")

[node name="Hurtbox" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_y8xna")

[node name="HitboxArea" type="Area2D" parent="."]
unique_name_in_owner = true
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxArea"]
shape = SubResource("CircleShape2D_bposu")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
